new file:   AdditionAndDivision.js modified:   index.html new file:   week1.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
         
         <!-- Uncomment the file you are working on -->
 
-        <script src="VariablesAndOperations.js"></script>
+        <!-- <script src="VariablesAndOperations.js"></script> -->
         <!-- <script src="ConditionsAndLoops.js"></script> -->
         <!-- <script src="ArraysAndFunctions.js"></script> -->
         <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
         <!-- <script src="ObjectOriented.js"></script> -->
+        <script src="AdditionAndDivision.js"></script>
 
     </body>
 </html>
